@@ -76,28 +76,6 @@ name|util
 operator|.
 name|concurrent
 operator|.
-name|ExecutionException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|Future
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
 name|atomic
 operator|.
 name|AtomicLong
@@ -370,46 +348,78 @@ name|boolean
 name|dropBufferedUpdates
 parameter_list|()
 block|{
-name|Future
-argument_list|<
-name|RecoveryInfo
-argument_list|>
-name|future
-init|=
-name|applyBufferedUpdates
+name|versionInfo
+operator|.
+name|blockUpdates
 argument_list|()
-decl_stmt|;
+expr_stmt|;
+try|try
+block|{
 if|if
 condition|(
-name|future
+name|state
+operator|!=
+name|State
+operator|.
+name|BUFFERING
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|log
+operator|.
+name|isInfoEnabled
+argument_list|()
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Dropping buffered updates "
+operator|+
+name|this
+argument_list|)
+expr_stmt|;
+block|}
+comment|// since we blocked updates, this synchronization shouldn't strictly be
+comment|// necessary.
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
+if|if
+condition|(
+name|tlog
 operator|!=
 literal|null
 condition|)
 block|{
-try|try
-block|{
-name|future
+comment|// tlog.rollback(recoveryInfo.positionOfStart);
+block|}
+block|}
+name|state
+operator|=
+name|State
 operator|.
-name|get
-argument_list|()
+name|ACTIVE
+expr_stmt|;
+name|operationFlags
+operator|&=
+operator|~
+name|FLAG_GAP
 expr_stmt|;
 block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-decl||
-name|ExecutionException
-name|e
-parameter_list|)
+finally|finally
 block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-name|e
-argument_list|)
-throw|;
-block|}
+name|versionInfo
+operator|.
+name|unblockUpdates
+argument_list|()
+expr_stmt|;
 block|}
 return|return
 literal|true
